--- a/my_templates/base.html
+++ b/my_templates/base.html
@@ -11,7 +11,7 @@
     rel="stylesheet"
     crossorigin="anonymous">
 
-  <!-- ダークテーマ用カスタムCSS -->
+  <!-- カスタムCSS -->
   <style>
     body {
       background-color: #121212;
@@ -22,68 +22,53 @@
     }
     .navbar-brand, .nav-link {
       color: #e0e0e0 !important;
+      white-space: nowrap;
     }
     .nav-link.active {
       font-weight: 600;
-      border-bottom: 2px solid #ffffff;
+      border-bottom: 2px solid #fff;
     }
-    .card {
-      background-color: #1e1e1e;
-      border: none;
+
+    /* ナビ全要素を横並びに */
+    .navbar .container-fluid {
+      display: flex;
+      align-items: center;
+      flex-wrap: nowrap;
+      overflow-x: auto;
     }
-    .card .card-title,
-    .card .card-text,
-    .card .text-muted {
-      color: #cccccc;
+    .navbar-nav {
+      display: flex;
+      flex-direction: row;
+      margin-left: 1rem;  /* ブランドとナビの間のスペース */
+      padding: 0;
     }
-    .form-control {
-      background-color: #2a2a2a;
-      border: 1px solid #333333;
-      color: #e0e0e0;
+    .navbar-nav .nav-item {
+      list-style: none;
     }
-    .form-control::placeholder {
-      color: #777777;
+    .navbar-nav .nav-link {
+      display: inline-block;
+      padding: 0.3rem 0.6rem;
+      font-size: 0.8rem;  /* 好みに応じて調整 */
     }
-    .btn-outline-light {
-      color: #e0e0e0;
-      border-color: #555555;
+
+    /* スマホ時、さらに小さくしたければここで上書き */
+    @media (max-width: 576px) {
+      .navbar-nav .nav-link {
+        font-size: 0.6rem;
+        padding: 0.2rem 0.4rem;
+      }
+      .navbar-brand {
+        font-size: 0.85rem;
+        margin-right: 0.5rem;
+      }
     }
-    .btn-outline-light:hover {
-      background-color: #333333;
-      border-color: #777777;
-    }
+
     footer {
-      color: #777777;
-    }
-    a {
-      color: #ffffff;
+      color: #777;
     }
     a:hover {
-      color: #bbbbbb;
+      color: #bbb;
     }
-
-
-    /* ダークテーマ用 nav-tabs カスタマイズ */
-  .nav-tabs {
-    border-bottom: 1px solid #444;
-  }
-  .nav-tabs .nav-link {
-    color: #bbb;                     /* 非アクティブ時の文字色 */
-    background-color: #1f1f1f;       /* タブ背景 */
-    border: 1px solid #444;          /* タブ枠 */
-    border-bottom-color: transparent;/* 下線を消す */
-    margin-right: .25rem;
-  }
-  .nav-tabs .nav-link:hover {
-    color: #fff;
-    background-color: #333;
-    border-color: #555;
-  }
-  .nav-tabs .nav-link.active {
-    color: #fff;                     /* アクティブ文字色 */
-    background-color: #2a2a2a;       /* アクティブタブ背景 */
-    border-color: #555 #555 #1f1f1f; /* 下ボーダーをコンテナ色に合わせて消す */
-  }
   </style>
 
   {% block extra_head %}{% endblock %}
@@ -91,25 +76,15 @@
 <body class="d-flex flex-column min-vh-100">
 
   <!-- ナビバー -->
-  <nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="{% url 'video_list' %}">Reidau.com</a>
-    <button class="navbar-toggler" …>
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- 既存の「保存」 -->
+  <nav class="navbar navbar-dark">
+    <div class="container-fluid">
+      <!-- サイト名 -->
+      <a class="navbar-brand" href="{% url 'video_list' %}">Reidau.com</a>
+      <!-- ナビ要素を常に表示 -->
+      <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'save' %}">保存</a>
         </li>
-
-        <!-- ここに「アップロード」を追加 -->
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'upload' %}">アップロード</a>
-        </li>
-
         <li class="nav-item">
           <a class="nav-link" href="{% url 'video_ranking' %}">ランキング</a>
         </li>
@@ -124,11 +99,9 @@
           </a>
         </li>
       </ul>
-      …
+      {% block navbar_extra %}{% endblock %}
     </div>
-  </div>
-</nav>
-
+  </nav>
 
   <!-- メインコンテンツ -->
   <main class="flex-grow-1 container my-4">
