--- a/my_templates/scraper/ranking.html
+++ b/my_templates/scraper/ranking.html
@@ -1,5 +1,4 @@
 {% extends "scraper/../base.html" %}
-
 {% block title %}ランキング{% endblock %}
 
 {% block content %}
@@ -34,22 +33,65 @@
     </li>
   </ul>
 
-  <!-- ランキングのリスト表示 -->
+  <!-- 統一したカード表示 -->
   <div class="row row-cols-2 row-cols-md-3 g-4">
     {% for video in ranking %}
       <div class="col">
-        <div class="card h-100">
+        <div class="listn" id="{{ video.disp_id }}">
           <a href="{% url 'video_detail' video.disp_id %}">
-            <img src="{{ video.thumb_url }}"
-                 class="card-img-top"
-                 alt="{{ video.alt_text }}"
-                 onerror="this.style.display='none';">
+            {% if video.uploaded_file %}
+              <video controls class="img-fluid rounded" style="width:100%; height:auto;">
+                <source src="{{ video.uploaded_file.url }}" type="video/mp4">
+                お使いのブラウザは video タグに対応していません。
+              </video>
+            {% elif video.thumb_url %}
+              <img
+                src="{{ video.thumb_url }}"
+                alt="{{ video.alt_text }}"
+                class="img-fluid rounded"
+                style="width:100%; height:auto;"
+                onerror="this.style.display='none';"
+              >
+            {% else %}
+              <div class="bg-secondary text-center text-light py-5 rounded">
+                No Preview
+              </div>
+            {% endif %}
           </a>
         </div>
       </div>
     {% empty %}
       <p>この期間に表示された動画はありません。</p>
     {% endfor %}
+  </div>
+
+  <!-- ページ遷移ボタン -->
+  <div class="d-flex justify-content-center my-4">
+    {% if page_obj.has_previous %}
+      <a href="?period={{ current_period }}&page={{ page_obj.previous_page_number }}"
+         class="btn btn-outline-light me-2">
+        &laquo; 前へ
+      </a>
+    {% else %}
+      <button class="btn btn-outline-secondary me-2" disabled>
+        &laquo; 前へ
+      </button>
+    {% endif %}
+
+    <span class="align-self-center mx-2">
+      {{ page_obj.number }} / {{ page_obj.paginator.num_pages }}
+    </span>
+
+    {% if page_obj.has_next %}
+      <a href="?period={{ current_period }}&page={{ page_obj.next_page_number }}"
+         class="btn btn-outline-light ms-2">
+        次へ &raquo;
+      </a>
+    {% else %}
+      <button class="btn btn-outline-secondary ms-2" disabled>
+        次へ &raquo;
+      </button>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
